# ExtCR

./: .gitignore  README.md
actuator_controller/: CMakeLists.txt  Readme.md  package.xml
actuator_controller/cfg/: ac_param.cfg
actuator_controller/include/: Timer.hpp  actuator.h  actuator_controller_node.h  actuator_state.h  callbackUart.hpp  com_interface.h  faulhaber.h  limit_check.h  spi.hpp  uart.h
actuator_controller/launch/: actuator_controller.launch  actuator_controller_nice.launch
actuator_controller/msg/: actuator_cmd.msg  actuator_pos_cmd.msg  actuator_state.msg  actuator_vel_cmd.msg
actuator_controller/src/: Timer.cpp  actuator_controller_node.cpp  callbackUart.cpp  faulhaber.cpp  limit_check.cpp  main_actuator_controller.cpp  spi.cpp  uart.cpp
actuator_controller/srv/: setInt.srv
actuator_controller/yaml/: actuator_controller.yaml
